# anilist_cli

./: Cargo.toml  README.md  flake.nix
.github/workflows/: anilist.yml
src/: main.rs  requests.rs
