[package]
name = "anilist_cli"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
feature = "0.5.1"
reqwest = "0.11.24"
serde_json = "1.0.114"
skim = "0.10.4"
tokio = { version = "1.36.0", features = [ "macros", "rt-multi-thread"] }
